# StudyCUDA

./: CMakeLists.txt  add_numbers.cu  atomic_test.cu  check_errors.cu  gpu_info.cu  main.cu  pi_solver.cu  riemann_zeta_function.cu
